--- a/app/src/main/res/layout/activity_daily_forecast.xml
+++ b/app/src/main/res/layout/activity_daily_forecast.xml
@@ -13,9 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@android:id/list"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/thisWeekLabel"
+        android:layout_above="@+id/locationLabel"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,4 +31,26 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="#fff"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Weekly Forecast"
+        android:id="@+id/thisWeekLabel"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#fff"
+        android:textSize="30dp"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dundee, Scotland"
+        android:id="@+id/locationLabel"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:textColor="#aaffffff"
+        android:layout_marginBottom="10dp"/>
 </RelativeLayout>
